[package]
name = "algorithms"
version = "0.1.0"
edition = "2021"


[dependencies]
chrono = "0.4"
ahash = "0.8"
indexmap = "2.2"

[dev-dependencies]
criterion = "0.5"
rand = "0.8" # for generating random TTLs


[[bench]]
name = "time_indexed_bench_base_skip_list_expiry"
harness = false

[[bench]]
name = "time_indexed_bench_upgrade1_level_indexed_skip_list"
harness = false

[[bench]]
name = "time_indexed_bench_upgrade2_concurrent_level_skip_list"
harness = false

[[bench]]
name = "time_indexed_bench_upgrade3_bucket_b_tree_map_expiry"
harness = false