[package]
name = "algorithms"
version = "0.1.0"
edition = "2021"


[dependencies]
chrono = "0.4"
ahash = "0.8"
indexmap = "2.2"
parking_lot = "0.12.3"
num_cpus = "1"

[dev-dependencies]
criterion = "0.5"
rand = "0.8" # for generating random TTLs


[[bench]]
name = "self_expiring_bench_skip_list_expiry_base"
harness = false

[[bench]]
name = "self_expiring_bench_skip_list_expiry_upgrade1_level_indexed_skip_list"
harness = false

[[bench]]
name = "self_expiring_bench_skip_list_expiry_upgrade2_concurrent_level_skip_list"
harness = false

[[bench]]
name = "self_expiring_bench_skip_list_expiry_upgrade3_bucket_b_tree_map_expiry"
harness = false

[[bench]]
name = "self_expiring_bench_split_list_expiry_base"
harness = false

[[bench]]
name = "self_expiring_bench_split_list_expiry_upgrade1_split_list_linked_buckets"
harness = false

[[bench]]
name = "self_expiring_bench_split_list_expiry_upgrade2_split_list_linked_buckets_parking_lot_expiry"
harness = false

[[bench]]
name = "self_expiring_bench_split_list_expiry_upgrade3_split_list_fine_grained_buckets"
harness = false

[[bench]]
name = "self_expiring_bench_split_list_expiry_upgrade4_split_list_fanout"
harness = false

[[bench]]
name = "self_expiring_bench_split_list_expiry_upgrade5_split_list_fanout_thread_local_expiry"
harness = false

[[bench]]
name = "self_expiring_bench_real_time_queues_prototype"
harness = false