[package]
name = "data-structures-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.5"
data-structures = { path = "../data-structures" }